--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:24.1.0'
     compile 'eu.the4thfloor.volley:com.android.volley:2015.05.28'
     compile 'com.android.support:recyclerview-v7:24.1.0'
+    compile 'com.android.support:design:24.1.0'
 }
